<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/one"
    tools:context=".fragments.FragmentA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="14dp"
                android:layout_height="17dp"
                android:src="@drawable/circle_filled"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                />

            <ImageView
                android:layout_width="14dp"
                android:layout_height="17dp"
                android:src="@drawable/circle_black"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                />

            <ImageView
                android:id="@+id/circleThree"
                android:layout_width="14dp"
                android:layout_height="17dp"
                android:src="@drawable/circle_black"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:textColor="@color/one"
                android:layout_marginTop="20dp"
                android:layout_marginStart="240dp"/>
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/portfolio"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="100dp"
            android:layout_marginStart="60sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2023"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="1dp"
            android:layout_marginStart="60sp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="55dp"
            android:fontFamily="@font/brilatace"
            android:text="@string/android"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="220dp"
            android:layout_marginTop="5dp"
            android:textSize="25sp"
            android:text="@string/anurag_kewat"
            android:textColor="@color/black"
            android:background="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="120dp"
            android:textSize="15sp"
            android:text="@string/developer_amp_designer"
            android:textColor="@color/black"
            android:background="@color/white"
            />



    </LinearLayout>



</FrameLayout>