<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cream"
    tools:context=".navigatuindrawer.ShareFragment">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ScrollViewCount">





        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/dot"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/jki" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parul_university"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/gabriela"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2020_2024"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/gabriela"
                android:layout_marginStart="40dp"
                android:layout_marginTop="8dp"
                android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>



</LinearLayout>

