<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroun"
    android:orientation="vertical"
    tools:context=".navigatuindrawer.AboutFragment">


    <ImageView
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:src="@drawable/picsar"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/main_bg">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="100dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Anurag Kewat"
                    android:layout_marginTop="5dp"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/gabriela"
                    android:textStyle="bold|italic"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/gabriela"
                    android:text="@string/description"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:text="@string/description_01"
                    android:textSize="20sp"
                    android:fontFamily="@font/gabriela"
                    />

            </LinearLayout>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/indiabg"
                android:layout_marginStart="45dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "1 Years"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="30dp"
                    android:fontFamily="@font/gabriela"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "Experience"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:textSize="20dp"
                    android:fontFamily="@font/gabriela"/>
            </LinearLayout>

           <View
               android:layout_width="1dp"
               android:layout_height="100dp"
              android:layout_marginStart="20dp"
               android:background="@color/black"
              />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "20"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="30dp"
                    android:fontFamily="@font/gabriela"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "Age"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/gabriela"/>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:background="@color/black"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "Bachelor"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="30dp"
                    android:fontFamily="@font/gabriela"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "Degree"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="40dp"
                    android:textSize="20dp"
                    android:fontFamily="@font/gabriela"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_gravity="center">

            <TextView
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_02"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:fontFamily="@font/gabriela"/>


        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">


            <TextView
                android:id="@+id/contact_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="67dp"
                android:layout_marginEnd="98dp"
                android:background="@drawable/rectangleone"
                android:fontFamily="@font/gabriela"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:paddingStart="55dp"
                android:paddingEnd="55dp"
                android:text="Contact me"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_person_24"
                android:layout_marginStart="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/contact_me"
                app:layout_constraintHorizontal_bias="0.918"
                android:background="@drawable/circle_bg"
                app:layout_constraintStart_toStartOf="@+id/contact_me"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</LinearLayout>